salesforce-main/src/main/default/objects/Booking_Line__c/Booking_Line__c.object-meta.xml
<CustomObject>
    <label>Booking Line</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Booking Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>