salesforce-main/src/main/default/objects/Booking_Line__c/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>