salesforce-main/src/main/default/objects/Booking_Line__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track if the student attended this session or not</description>
    <label>Attended?</label>
    <type>Checkbox</type>
</CustomField>