salesforce-main/src/main/default/objects/Booking_Line__c/fields/Batch_failed__c.field-meta.xml
<CustomField>
    <fullName>Batch_failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch failed</label>
    <type>Checkbox</type>
</CustomField>