salesforce-main/src/main/default/objects/Booking_Line__c/fields/Batch_failure_date__c.field-meta.xml
<CustomField>
    <fullName>Batch_failure_date__c</fullName>
    <label>Batch failure date</label>
    <type>Date</type>
</CustomField>