salesforce-main/src/main/default/objects/Booking_Line__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <formula>TEXT(blng_Order__r.Billing_Type__c)</formula>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>