salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_Account__c.field-meta.xml
<CustomField>
    <fullName>blng_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that will be invoiced for the booking</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking Lines (Account)</relationshipLabel>
    <relationshipName>Booking_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>