salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>blng_EndDateTime__c</fullName>
    <description>End date of the booking line. If session this will be session date, if material this will be the instance start date. This field will be populated by the booking line code</description>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>