salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_MatchingId__c.field-meta.xml
<CustomField>
    <fullName>blng_MatchingId__c</fullName>
    <description>This field will be the matching ID from the related booking summary. This field will be populated by the booking line creation code</description>
    <externalId>true</externalId>
    <label>Matching ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>