salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_Order__c.field-meta.xml
<CustomField>
    <fullName>blng_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order this booking relates to</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>