salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>blng_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order product line this booking line relates to.This field is populated by the booking line creation code</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>