salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_PreratedAmount__c.field-meta.xml
<CustomField>
    <fullName>blng_PreratedAmount__c</fullName>
    <description>Field to hold the unit price of each booking line. This figure will be pulled from the order product line by the code creating the booking line</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>