salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>blng_StartDateTime__c</fullName>
    <description>The start date of the session if product family is session or the instance start date if product family is materials</description>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>