salesforce-main/src/main/default/objects/Booking_Line__c/fields/blng_UsageSummary__c.field-meta.xml
<CustomField>
    <fullName>blng_UsageSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The booking summary this booking line will be assigned to. This field is populated by the booking line creation code</description>
    <label>Usage Summary</label>
    <referenceTo>blng__UsageSummary__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>