salesforce-main/src/main/default/objects/Booking_Line__c/fields/Booking_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Record_Type__c</fullName>
    <formula>Booking__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Record Type</label>
    <type>Text</type>
</CustomField>