salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Attendance_Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>BPP_Attendance_Recorded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance Recorded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>