salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_AX_Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>BPP_AX_Invoice_Reference__c</fullName>
    <label>AX Invoice Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>