salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Cancellation_Action__c.field-meta.xml
<CustomField>
    <fullName>BPP_Cancellation_Action__c</fullName>
    <description>Populated by the Cancellation Action field on the related Booking record</description>
    <formula>TEXT(Booking__r.BPP_Cancellation_Action__c)</formula>
    <label>Cancellation Action</label>
    <type>Text</type>
</CustomField>