salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Instance_Product__c.field-meta.xml
<CustomField>
    <fullName>BPP_Instance_Product__c</fullName>
    <formula>Instance__r.Product__r.Id</formula>
    <label>Instance Product</label>
    <type>Text</type>
</CustomField>