salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Invoiced_In_AX__c.field-meta.xml
<CustomField>
    <fullName>BPP_Invoiced_In_AX__c</fullName>
    <formula>IF(ISBLANK(BPP_Invoiced_In_AX_On__c), False, True)</formula>
    <label>Invoiced In AX?</label>
    <type>Checkbox</type>
</CustomField>