salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Invoiced_In_AX_On__c.field-meta.xml
<CustomField>
    <fullName>BPP_Invoiced_In_AX_On__c</fullName>
    <label>Invoiced In AX On</label>
    <type>Date</type>
</CustomField>