salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Is_Material_Booking__c.field-meta.xml
<CustomField>
    <fullName>BPP_Is_Material_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Material Booking</label>
    <type>Checkbox</type>
</CustomField>