salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Other_Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>BPP_Other_Invoice_Reference__c</fullName>
    <description>To store any other external Invoice Reference</description>
    <label>Other Invoice Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>