salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Second_Attendance_Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>BPP_Second_Attendance_Recorded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Attendance Recorded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>