salesforce-main/src/main/default/objects/Booking_Line__c/fields/BPP_Second_Attendance_Recorded_On__c.field-meta.xml
<CustomField>
    <fullName>BPP_Second_Attendance_Recorded_On__c</fullName>
    <label>Second Attendance Recorded On</label>
    <type>DateTime</type>
</CustomField>