salesforce-main/src/main/default/objects/Booking_Line__c/fields/CBA__c.field-meta.xml
<CustomField>
    <fullName>CBA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CBA relating to the selected product and instance</description>
    <label>CBA</label>
    <referenceTo>CBA__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>