salesforce-main/src/main/default/objects/Booking_Line__c/fields/Charge_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Charge_Trigger__c</fullName>
    <label>Charge Trigger</label>
    <length>50</length>
    <type>Text</type>
</CustomField>