salesforce-main/src/main/default/objects/Booking_Line__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <formula>TEXT(blng_OrderProduct__r.SBQQ__ChargeType__c)</formula>
    <label>Charge Type</label>
    <type>Text</type>
</CustomField>