salesforce-main/src/main/default/objects/Booking_Line__c/fields/Consolidated_Address__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Address__c</fullName>
    <formula>IF(
AND(ISBLANK(Delivered_to_BPP_Address__c), blng_Order__r.Deliver_Materials_to_Student__c = FALSE),
IF(LEN(Address_Line_1__c)&gt;0, blng_Account__r.Name &amp; &quot;, &quot; &amp; Address_Line_1__c, &quot;&quot;)&amp;
IF(LEN(Address_Line_2__c)&gt;0, &quot;, &quot; &amp; Address_Line_2__c, &quot;&quot;)&amp;
IF(LEN(Address_Line_3__c)&gt;0, &quot;, &quot; &amp; Address_Line_3__c,&quot;&quot;),
IF(LEN(Address_Line_1__c)&gt;0, Address_Line_1__c, &quot;&quot;)&amp;
IF(LEN(Address_Line_2__c)&gt;0, &quot;, &quot; &amp; Address_Line_2__c, &quot;&quot;)&amp;
IF(LEN(Address_Line_3__c)&gt;0, &quot;, &quot; &amp; Address_Line_3__c,&quot;&quot;)
)</formula>
    <label>Consolidated Address</label>
    <type>Text</type>
</CustomField>