salesforce-main/src/main/default/objects/Booking_Line__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courier</label>
    <referenceTo>Courier__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>