salesforce-main/src/main/default/objects/Booking_Line__c/fields/Delivered_to_BPP_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivered_to_BPP_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivered to BPP Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Location__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Study_Location__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>