salesforce-main/src/main/default/objects/Booking_Line__c/fields/Delivered_to_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivered_to_Customer_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivered to Customer Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>