salesforce-main/src/main/default/objects/Booking_Line__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery record that is associated with this booking line (this is the parent object &amp; value is set automatically when the child record establishes the relationship)</description>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>