salesforce-main/src/main/default/objects/Booking_Line__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Delivery Status from the related delivery record</description>
    <formula>TEXT( Delivery__r.Delivery_Status__c )</formula>
    <label>Delivery Status</label>
    <type>Text</type>
</CustomField>