salesforce-main/src/main/default/objects/Booking_Line__c/fields/Delivery_Status_OLD__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_OLD__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not Fulfil</fullName>
            </value>
            <value>
                <fullName>To be Fulfilled</fullName>
            </value>
            <value>
                <fullName>Sent for Fulfilment</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>