salesforce-main/src/main/default/objects/Booking_Line__c/fields/Dispatch_Reference__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Reference__c</fullName>
    <label>Dispatch Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>