salesforce-main/src/main/default/objects/Booking_Line__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The instance this booking line relates to</description>
    <label>Instance</label>
    <referenceTo>Instance__c</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>