salesforce-main/src/main/default/objects/Booking_Line__c/fields/Instance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Instance_End_Date__c</fullName>
    <description>This field has been created to capture the instance end date on the booking line</description>
    <formula>Instance__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance End Date</label>
    <type>Date</type>
</CustomField>