salesforce-main/src/main/default/objects/Booking_Line__c/fields/Instance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Instance_Start_Date__c</fullName>
    <description>Formula field used to pull the instance start date onto the booking line</description>
    <formula>Instance__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Start Date</label>
    <type>Date</type>
</CustomField>