salesforce-main/src/main/default/objects/Booking_Line__c/fields/Material_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Product_Code__c</fullName>
    <label>Material Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>