salesforce-main/src/main/default/objects/Booking_Line__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>The PO number this booking line is associated to</description>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>