salesforce-main/src/main/default/objects/Booking_Line__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>The product family from the quote line. Populated by a flow</description>
    <label>Product Family</label>
    <length>200</length>
    <type>Text</type>
</CustomField>