salesforce-main/src/main/default/objects/Booking_Line__c/fields/Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Date__c</fullName>
    <description>This field will hold the date used for revenue recognition for billing. For a session line the date will be the date of the session, for a material line the date will show the instance start date</description>
    <inlineHelpText>This field will hold the date used for revenue recognition for billing. For a session line the date will show the date of the actual session, for a material line the date will show the instance start date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>