salesforce-main/src/main/default/objects/Booking_Line__c/fields/Revenue_Recognition_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Excluded__c</fullName>
    <description>Indicates whether booking line should be excluded from revenue recognition.  If true, no Revenue Transaction will be created.</description>
    <formula>OR(ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Apprenticeship bookings&quot;),
ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Poland bookings&quot;),
ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Channel Island bookings&quot;),
ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Learning Media Only&quot;),
ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Fixed Price Key Client Invoiced Off System&quot;),
ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Romania Bookings&quot;),
ISPICKVAL(blng_Order__r.Booking_Type__c, &quot;Malaysia Bookings&quot;),
ISPICKVAL(blng_Order__r.Billing_Mode__c, &quot;Billed off-system&quot;)
)</formula>
    <inlineHelpText>Indicates whether booking line should be excluded from revenue recognition.  If true, no Revenue Transaction will be created.</inlineHelpText>
    <label>Revenue Recognition Excluded</label>
    <type>Checkbox</type>
</CustomField>