salesforce-main/src/main/default/objects/Booking_Line__c/fields/Second_Session_Attended__c.field-meta.xml
<CustomField>
    <fullName>Second_Session_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For recording if a second session of a split session was attended by the student</description>
    <label>Second Session Attended?</label>
    <type>Checkbox</type>
</CustomField>