salesforce-main/src/main/default/objects/Booking_Line__c/fields/Second_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Session_Date__c</fullName>
    <description>If this session is made up of 2 partial session timings (morning/evening) this field will display the end time of the secondary session</description>
    <formula>IF(ISBLANK(Session__r.Second_Session_Date__c), NULL , Session__r.Second_Session_Date__c)</formula>
    <inlineHelpText>If this session is made up of 2 partial session timings (morning/evening) this field will display the end time of the secondary session</inlineHelpText>
    <label>Second Session Date</label>
    <type>Date</type>
</CustomField>