salesforce-main/src/main/default/objects/Booking_Line__c/fields/Second_Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Second_Session_End_Time__c</fullName>
    <description>If this session is made up of 2 partial session timings (morning/evening) this field will display the end time of the secondary session</description>
    <formula>IF(ISBLANK(  Session__r.Second_Session_Date__c) , &quot;&quot;, Session__r.Second_Session_End_Time__c)</formula>
    <inlineHelpText>If this session is made up of 2 partial session timings (morning/evening) this field will display the end time of the secondary session</inlineHelpText>
    <label>Second Session End Time</label>
    <type>Text</type>
</CustomField>