salesforce-main/src/main/default/objects/Booking_Line__c/fields/Second_Session_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Second_Session_Start_Time__c</fullName>
    <description>If this session is made up of 2 partial session timings (morning/evening) this field will display the start time of the secondary session</description>
    <formula>IF(ISBLANK( Session__r.Second_Session_Date__c), &quot;&quot;,  Session__r.Second_Session_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this session is made up of 2 partial session timings (morning/evening) this field will display the start time of the secondary session</inlineHelpText>
    <label>Second Session Start Time</label>
    <type>Text</type>
</CustomField>