salesforce-main/src/main/default/objects/Booking_Line__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The session record related to this booking line</description>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Booking Lines (Old)</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>