salesforce-main/src/main/default/objects/Booking_Line__c/fields/Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Time__c</fullName>
    <description>Formula to show the session end time</description>
    <formula>IF(CONTAINS(Product_Family__c, &quot;Session&quot;),  Session__r.End_Time__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session End Time</label>
    <type>Text</type>
</CustomField>