salesforce-main/src/main/default/objects/Booking_Line__c/fields/Session_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Time__c</fullName>
    <description>Formula field to show the session start time</description>
    <formula>IF(CONTAINS(Product_Family__c, &quot;Session&quot; ),  Session__r.Start_Time__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Start Time</label>
    <type>Text</type>
</CustomField>