salesforce-main/src/main/default/objects/Booking_Line__c/fields/TECH_BookingCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>TECH_BookingCreditAmount__c</fullName>
    <formula>blng_PreratedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_BookingCreditAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>