salesforce-main/src/main/default/objects/Booking_Line__c/fields/TECH_OrderProduct_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>TECH_OrderProduct_LegalEntity__c</fullName>
    <formula>blng_OrderProduct__r.blng__LegalEntity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_OrderProduct_LegalEntity</label>
    <type>Text</type>
</CustomField>