salesforce-main/src/main/default/objects/Booking_Line__c/fields/TECH_QuoteLineProduct__c.field-meta.xml
<CustomField>
    <fullName>TECH_QuoteLineProduct__c</fullName>
    <formula>blng_OrderProduct__r.SBQQ__QuoteLine__r.SBQQ__Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_QuoteLineProduct</label>
    <type>Text</type>
</CustomField>