salesforce-main/src/main/default/objects/Booking_Line__c/fields/Usage_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Usage_Failure_Reason__c</fullName>
    <description>The error message why the Usage failed to be created should be stored against the Booking Line</description>
    <label>Usage Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>