salesforce-main/src/main/default/objects/Booking_Line__c/recordTypes/Booking_Line.recordType-meta.xml
<RecordType>
    <fullName>Booking_Line</fullName>
    <active>true</active>
    <label>Booking Line</label>
</RecordType>