salesforce-main/src/main/default/objects/Booking_Line__c/recordTypes/Locked_Booking_Line.recordType-meta.xml
<RecordType>
    <fullName>Locked_Booking_Line</fullName>
    <active>true</active>
    <label>Locked Booking Line</label>
</RecordType>