salesforce-main/src/main/default/objects/Booking_Line__c/validationRules/Validate_Externally_Invoiced_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Externally_Invoiced_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(blng_Order__r.Billing_Mode__c) = &apos;Billed in Salesforce&apos;,
OR(
NOT(ISBLANK(BPP_Invoiced_In_AX_On__c)),
NOT(ISBLANK(BPP_AX_Invoice_Reference__c))
)
)</errorConditionFormula>
    <errorMessage>The related Order has been specified to be Billed In Salesforce. A Billing Line&apos;s &apos;Externally Invoiced&apos; fields should only be populated if the related Order has a &apos;Billing Mode&apos; of &apos;Billed off-system&apos;</errorMessage>
</ValidationRule>